src/Volo/FrontendBundle/Resources/public/css/partial/cart.scss
/* ... */
td.summary__item__sign {
  padding-right: 0;
  width: 1%;
}

td.summary__item__name {
  width: 78%;
}

.summary__item__extra {
  line-height: 1.143;
  display: block;
  color: $color-text-secondary;
  margin-top: 3px;
  font-weight: normal;

  &:first-child {
    margin-top: 3px;
  }
}

.summary__item__special-instructions {
  line-height: 1.143;
  display: block;
  color: $color-text-secondary;
  margin-top: 3px;
  font-weight: normal;
  @include text-overflow();
  max-width: 130px;
}

td.summary__item__price {
  position: relative;
  padding-right: 0;
  text-align: right;
  width: 20%;
  white-space: nowrap;

  span {
    margin: 0;
  }
}

td.summary__item__empty {
  padding: 0;
  height: $grid-gutter-width / 2;
}

tr.summary__item__row_desktop {
  display: none;
  @include respond-from("screen-md") {
    display: table-row;
    width: 100%;

    &:hover {
      .summary__item__quantity-icons, .summary__item__remove-icon {
        display: block;
      }
      .summary__item__name {
        color: $color-text-highlight;
      }

      .summary__item__remove-icon:before {
        display: block;
        content: '';
        position: absolute;
        right: 26px;
        height: 30px;
        width: 263px;
        top: 9px;
      }
    }
  }
}

td.summary__item__empty {
  display: none;
  @include respond-from("screen-md") {
    display: table-cell;
    width: 100%;
    padding: 0;
    height: $grid-gutter-width;
  }
}

tr.summary__item__row_mobile {
  @include respond-from("screen-md") {
    display: none;
  }

  td.summary__item__quantity {
    padding: 8px $space-sm;
    font-size: $font-size-1_6rem;

    span {
      padding: 0;
    }
  }

  td.summary__item__sign {
    display: none;
  }

  td.summary__item__name {
    padding-top: 8px;
    padding-left: $space-sm;
    padding-bottom: 22px;
    color: $color-text-highlight;
    font-weight: bold;
  }

  td.summary__item__price {
    padding-top: 8px;
    width: 35%;

    span {
      display: inline-block;
    }

    i {
      background-color: $error-msg-color-bg;
      color: $error-msg-color-text;
      text-align: center;
      border-radius: 50%;
      width: 14px;
      @include centerTextVerticallyByHeight(14px);
      display: inline-block;
      margin-left: $space-xs;
    }
  }

  .summary__item__icon {
    padding-left: 0;
    padding-right: 0;

    i {
      width: 28px;
      border-radius: $border-radius-default;
      @include centerTextVerticallyByHeight(28px);
      background-color: $color-bg-secondary;
      display: inline-block;
      text-align: center;
      font-size: 2.1rem;
      color: $color-text-highlight;
    }

    i.summary__item__icon__disabled {
      color: $cta-color-text-primary;
      background-color: $cta-color-bg-disabled;

      &:hover {
        cursor: default;
      }
    }
  }
}

.summary__item__remove-icon {
  display: none;
  position: absolute;
  text-align: center;
  width: 28px;
  height: 33px;
  line-height: 2.14;
  top: -25px;
  right: -2px;
  background-image: url("#{$imagepath}cart/bg_delete-toggle-2x.png");
  background-size: 28px 33px;
  color: $color-text-highlight;

  i {
    display: block;
    width: 22px;
    @include centerTextVerticallyByHeight(21px);
    text-align: center;
    background-color: $color-bg-secondary;
    margin-top: 3px;
    margin-left: auto;
    margin-right: auto;
  }
}


.desktop-cart__title {
  font-family: $bold-font-family;
  @extend .text-center;
  text-transform: uppercase;
  font-size: $font-size-1_4rem;
  line-height: 1.875;
  margin: 0 0 $space-md;
  padding: $space-md $space-sm;
  border-bottom: $base-border;
  @include respond-from("screen-md") {
    border: none;
    padding-bottom: 0;
    margin: 0;

    span {
      display: none;
    }
  }
}
.checkout__time-picker .desktop-cart__title {
  @extend .checkout__step__item-title;
}


.cart__title--time {
  @include appear-from("screen-md");
}


.desktop-cart__time {
  padding: 0;
  @include respond-from("screen-md") {
    width: 98%;
    margin: 0 auto;
    padding: 0 $space-sm;
  }
}
.checkout__time-picker .desktop-cart__time {
  @include clearfix;
  padding: 0;
  font-size: 14px;
}


.desktop-cart__time__field-date {
  height: $input-height;
  @include make-xs-column(6, 0);
}
.checkout__time-picker .desktop-cart__time__field-date {
  @include make-xs-column(6);
  padding: 0;
}


.desktop-cart__time__field-time {
  height: $input-height;
  @include make-xs-column(6, 0);
  margin-left: -1px;
}
.checkout__time-picker .desktop-cart__time__field-time {
  @include make-xs-column(6);
  padding: 0;
}


.desktop-cart__order {
  @include make-webkit-custom-scroll-bars();
  padding: 0;
  line-height: 1.83;
}

.desktop-cart_order__message {
  @extend .text-center;
  color: $color-text-secondary;
  margin-bottom: 0;
  margin-top: $space-sm;
  line-height: 1.4;
}

.desktop-cart__footer__message {
  @extend .text-center;
  color: $color-text-secondary;
  padding: $space-sm;
  margin: 0;
  background-color: $color-bg-primary;
  @include respond-from("screen-md") {
   display: none;
  }
}

%desktop-cart__order__price {
  display: inline-block;
  float: right;
}

.desktop-cart__order__subtotal {
  padding: $space-md $space-sm 0;
  border-top: $base-border;
  @include respond-from("screen-md") {
    padding: $space-md 0 0;
  }
}

.desktop-cart__order__subtotal-price {
  @extend %desktop-cart__order__price;
}

.desktop-cart__order__subtotal-min-order {
  font-style: normal;
  font-size: $font-size-1_2rem;
  display: inline-block;
}

.desktop-cart__order__delivery {
  color: $color-text-secondary;
  padding: 0 $space-sm;
  @include respond-from("screen-md") {
    padding: 0;
  }
}

.desktop-cart__order__delivery-price {
  @extend %desktop-cart__order__price;
}

.desktop-cart__order__delivery-discount {
  color: $color-text-highlight;
  font-weight: normal;
}

.desktop-cart__order__voucher {
  color: $color-text-highlight;
  padding: 0 $space-sm;
  @include respond-from("screen-md") {
    padding: 0;
  }
}
/* ... */

